test/files/neg/t6666.check
t6666.scala:25: error: Implementation restriction: access of method x$2 in object O1 from <$anon: Function0>, would require illegal premature access to object O1
  F.byname(x)
           ^
t6666.scala:32: error: Implementation restriction: access of lazy value x$3 in object O2 from <$anon: Function0>, would require illegal premature access to object O2
  F.byname(x)
           ^
t6666.scala:39: error: Implementation restriction: access of method x$4 in object O3 from <$anon: Function0>, would require illegal premature access to object O3
  F.hof(() => x)
              ^
t6666.scala:52: error: Implementation restriction: access of method x$6 in class C1 from <$anon: Function0>, would require illegal premature access to the unconstructed `this` of class C1
  F.byname(x)
           ^
t6666.scala:56: error: Implementation restriction: access of lazy value x$7 in class C2 from <$anon: Function0>, would require illegal premature access to the unconstructed `this` of class C2
  F.byname(x)
           ^
t6666.scala:60: error: Implementation restriction: access of method x$8 in class C3 from <$anon: Function0>, would require illegal premature access to the unconstructed `this` of class C3
  F.hof(() => x)
              ^
t6666.scala:64: error: Implementation restriction: access of method x$9 in class C4 from object Nested$1, would require illegal premature access to the unconstructed `this` of class C4
  object Nested { def xx = x}
                           ^
t6666.scala:78: error: Implementation restriction: access of method x$11 in class C11 from <$anon: Function0>, would require illegal premature access to the unconstructed `this` of class C11
      F.byname(x)
               ^
t6666.scala:97: error: Implementation restriction: access of method x$12 in class C13 from <$anon: Function0>, would require illegal premature access to the unconstructed `this` of class C13
      F.hof(() => x)
                  ^
t6666.scala:106: error: Implementation restriction: access of method x$13 in class C14 from object Nested$3, would require illegal premature access to the unconstructed `this` of class C14
      object Nested { def xx = x}
                               ^
t6666.scala:114: error: Implementation restriction: access of method foo$1 in class COuter from class CInner$1, would require illegal premature access to the unconstructed `this` of class COuter
  class CInner extends C({foo})
                          ^
t6666.scala:120: error: Implementation restriction: access of method x$14 in class CEarly from object Nested$5, would require illegal premature access to the unconstructed `this` of class CEarly
    object Nested { def xx = x}
                             ^
12 errors found
